k8s/nginx-ingress-nodeport/sqaaas-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-based-virtualhost-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
spec:
  tls:
    - secretName: sqaaas-api-dev-secret 
    - secretName: sqaaas-api-stage-secret 
  rules:
  - host: api-dev.sqaaas.eosc-synergy.eu
    http:
      paths:
      - backend:
          serviceName: sqaaas-api-dev-service
          servicePort: 80
  - host: api-staging.sqaaas.eosc-synergy.eu
    http:
      paths:
      - backend:
          serviceName: sqaaas-api-stage-service
          servicePort: 80
